--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
             <nav class="menu-desktop">
                 <ul>
                     <li><a href="#">Inicio</a></li>
-                    <li><a href="#">Especialidades</a></li>
                     <li><a href="#">Sobre</a></li>
+                    <li><a href="#">Habilidades</a></li>
                     <li><a href="#">Projetos</a></li>
                 </ul>
             </nav>
@@ -43,6 +43,7 @@
             <div class="interface">
                 <div class="flex">
                     <div class="txt-topo-site">
+                        <p>Pedro Henrique</p>
                         <h1>FULL STACK DEVELOVER</h1>
                     </div> <!--txt topo site-->
                     <div class="links-redes">
@@ -54,7 +55,7 @@
                                 <a href="www.linkedin.com/in/engcomppedrosilva">
                                     <img src="images/logo linkedin.png" alt="logo-linkedin">
                                 </a>
-                                <a href="#">
+                                <a href="https://github.com/Pedrosilva27">
                                     <img src="images/logo github.png" alt="logo-github">
                                 </a>
                             </ul>
@@ -63,6 +64,31 @@
                 </div><!--flex-->
             </div> <!--interface-->
         </section> <!--Topo site-->
+
+        <section class="sobre">
+            <div class="interface">
+                <h2>SOBRE MIM</h2>
+                <div class="flex">
+                    <div class="texto-sobre-mim">
+                        <h3>Olá, me chamo Pedro Henrique.</h3> 
+                    <p1>
+                        Sou estudante de Engenharia da Computação com uma paixão insaciável por computadores, 
+                        programação e inovação tecnológica. Desde cedo, sempre fui fascinado pela maneira como 
+                        as máquinas e os softwares podem transformar ideias em realidades. Isso me levou a 
+                        embarcar no mundo do desenvolvimento full stack, onde posso explorar e criar soluções 
+                        de ponta a ponta – desde interfaces intuitivas e atraentes até arquiteturas robustas no 
+                        back-end.
+                        Minha jornada é movida pela curiosidade, enquanto continuo buscando expandir minhas habilidades 
+                        e conhecimento técnico.
+                    </p1>
+                    </div> <!--texto sobre mim-->
+
+                    <div class="img-sobre-mim">
+                        <img src="images/foto exemplo.avif" alt="img sobre mim exemplo">
+                    </div>
+                </div> <!--flex-->
+            </div> <!--interface-->
+        </section> <!--especialidades-->
     </main>
 
 </body>
