--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
             <nav class="menu-desktop">
                 <ul>
                     <li><a href="#">Inicio</a></li>
-                    <li><a href="#">Sobre</a></li>
-                    <li><a href="#">Habilidades</a></li>
+                    <li><a href="#sobre">Sobre</a></li>
+                    <li><a href="#habilidades">Habilidades</a></li>
                     <li><a href="#">Projetos</a></li>
                 </ul>
             </nav>
@@ -65,7 +65,7 @@
             </div> <!--interface-->
         </section> <!--Topo site-->
 
-        <section class="sobre">
+        <section id="sobre" class="sobre">
             <div class="interface">
                 <h2>SOBRE MIM</h2>
                 <div class="flex">
@@ -88,7 +88,51 @@
                     </div>
                 </div> <!--flex-->
             </div> <!--interface-->
-        </section> <!--especialidades-->
+        </section> <!--sobre-->
+
+        <section id="habilidades" class="habilidades">
+            <div class="interface">
+                <h2>HABILIDADES</h2>
+                <div class="flex">
+                    <div class="flex-item">
+                        <img src="images/html.png" alt="logo html">
+                        <h4>HTML</h4>
+                    </div>
+
+                    <div class="flex-item">
+                        <img src="images/css.png" alt="logo css">
+                        <h4>CSS</h4>
+                    </div>
+
+                    <div class="flex-item">
+                        <img src="images/js.png" alt="logo js">
+                        <h4>Java Script</h4>
+                    </div>
+
+                    <div class="flex-item">
+                        <img src="images/c.png" alt="logo c">
+                        <h4>C</h4>
+                    </div>
+
+                    <div class="flex-item">
+                        <img src="images/java.png" alt="logo java">
+                        <h4>Java</h4>
+                    </div>
+
+                    <div class="flex-item">
+                        <img src="images/sql server.png" alt="logo sql server">
+                        <h4>SQL Server</h4>
+                    </div>
+
+                    <div class="flex-item">
+                        <img src="images/python.png" alt="logo python">
+                        <h4>Python</h4>
+                    </div>
+
+                </div> <!--flex-->
+            </div> <!--interface-->
+        </section> <!--habilidades-->
+
     </main>
 
 </body>
